# Order_Book_Simulator

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.txt  commands.md  compile_commands.json  guide.md  improvement.md  sim_results.csv  sim_results_AS.csv  sim_results_SMP.csv
scripts/: plot_pnl.py
simulation_results/: benchmark_results.txt  sim_results.csv  sim_results_AS.csv  sim_results_SMP.csv
src/: main.cpp
src/bot/: imbalance_bot.cpp  imbalance_bot.hpp  market_maker.cpp  market_maker.hpp
src/bots/: avellaneda_stoikov_bot.cpp  avellaneda_stoikov_bot.hpp  stoikov_microprice_bot.cpp  stoikov_microprice_bot.hpp
src/engine/: order.hpp  order_book.cpp  order_book.hpp
src/simulation/: noise_trader.cpp  noise_trader.hpp  price_process.hpp
tests/: benchmark_order_book.cpp  test_bots.cpp  test_order_book.cpp
ui/: index.html
